<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:stretchColumns="1">

        <Spinner
            android:id="@+id/contact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TableRow android:layout_margin="2dip">

            <CheckBox
                android:id="@+id/ft_thumb"
                android:enabled="false"
                android:text="@string/label_ft_thumb"/>
        </TableRow>

        <TableRow android:layout_margin="2dip">

            <TextView android:text="@string/label_file"/>

            <TextView
                android:id="@+id/uri"
                android:singleLine="true"
                android:text="@string/text_dummy"
                android:textStyle="bold"/>
        </TableRow>

        <TableRow android:layout_margin="2dip">

            <TextView android:text="@string/label_size"/>

            <TextView
                android:id="@+id/size"
                android:singleLine="true"
                android:text="@string/number_dummy"
                android:textStyle="bold"/>
        </TableRow>

        <TableRow android:layout_margin="2dip">

            <TextView android:text="@string/label_progress_status"/>

            <TextView
                android:id="@+id/progress_status"
                android:singleLine="true"
                android:text="@string/text_dummy"
                android:textStyle="bold"/>
        </TableRow>

        <TableRow android:layout_margin="2dip">

            <TextView android:text="@string/label_progress_bar"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_marginEnd="5dip"
                android:layout_marginRight="5dip"/>
        </TableRow>

        <TableRow
            android:id="@+id/expiration"
            android:layout_margin="2dip">

            <TextView android:text="@string/label_expiration"/>

            <TextView
                android:id="@+id/value_expiration"
                android:singleLine="true"
                android:textStyle="bold"/>
        </TableRow>

        <CheckBox
            android:id="@+id/send_audio_msg"
            android:enabled="false"
            android:text="@string/label_send_audio_msg"/>

        <Button
            android:id="@+id/select_btn"
            android:text="@string/label_select_file"/>

        <Button
            android:id="@+id/invite_btn"
            android:text="@string/label_initiate_sharing"/>

        <Button
            android:id="@+id/pause_btn"
            android:text="@string/label_pause_transfer"/>

        <Button
            android:id="@+id/resume_btn"
            android:text="@string/label_resume_transfer"/>
    </TableLayout>

</ScrollView>