<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <TableRow
        android:layout_margin="2dp">

        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/label_log_contact" />

        <TextView
            android:id="@+id/history_log_item_contact"
            android:text="@string/contact_dummy" />
    </TableRow>

    <TableRow
        android:layout_margin="2dp">

        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/label_log_state" />

        <TextView
            android:id="@+id/history_log_item_state"
            android:text="@string/text_dummy" />
    </TableRow>

    <TableRow
        android:layout_margin="2dp">

        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/label_log_reason" />

        <TextView
            android:id="@+id/history_log_item_reason"
            android:text="@string/text_dummy" />
    </TableRow>

    <TableRow
        android:layout_margin="2dp">

        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/label_log_dir" />

        <TextView
            android:id="@+id/history_log_item_direction"
            android:text="@string/direction_dummy" />
    </TableRow>

    <TableRow
        android:layout_margin="2dp">

        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/label_log_date" />

        <TextView
            android:id="@+id/history_log_item_date"
            android:text="@string/timestamp_dummy" />
    </TableRow>

    <TableRow
        android:layout_margin="2dp">

        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/label_log_filename" />

        <TextView
            android:id="@+id/history_log_item_filename"
            android:text="@string/text_dummy" />
    </TableRow>

    <TableRow
        android:layout_margin="2dp">

        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/label_log_file_size" />

        <TextView
            android:id="@+id/history_log_item_size"
            android:text="@string/number_dummy" />
    </TableRow>

    <TableRow
        android:layout_margin="2dp">

        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/label_log_transferred" />

        <TextView
            android:id="@+id/history_log_item_transferred"
            android:text="@string/number_dummy" />
    </TableRow>

    <TableRow
        android:layout_margin="2dp">

        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/label_log_mime" />

        <TextView
            android:id="@+id/history_log_item_mime"
            android:text="@string/number_dummy" />
    </TableRow>

    <TableRow
        android:layout_margin="2dp">

        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/label_log_uri" />

        <TextView
            android:id="@+id/history_log_item_uri"
            android:text="@string/text_dummy" />
    </TableRow>
</TableLayout>
