<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dip"
    android:stretchColumns="1">

    <TableRow android:padding="2dip">

        <CheckBox
            android:id="@+id/file_thumb"
            android:text="@string/label_file_thumb" />
    </TableRow>

    <TableRow android:padding="2dip">

        <TextView android:text="@string/label_file" />

        <TextView
            android:id="@+id/uri"
            android:singleLine="true"
            android:textStyle="bold" />
    </TableRow>

    <TableRow android:padding="2dip">

        <TextView android:text="@string/label_progress_status" />

        <TextView
            android:id="@+id/progress_status"
            android:singleLine="true"
            android:textStyle="bold" />
    </TableRow>

    <TableRow android:padding="2dip">

        <TextView android:text="@string/label_progress_bar" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_marginEnd="5dip"
            android:layout_marginRight="5dip" />
    </TableRow>

    <Button
        android:id="@+id/select_btn"
        android:text="@string/label_select_file" />

    <Button
        android:id="@+id/upload_btn"
        android:text="@string/label_upload" />

    <Button
        android:id="@+id/show_btn"
        android:text="@string/label_show_upload" />

    <Button
        android:id="@+id/show_icon_btn"
        android:text="@string/label_show_icon_upload" />
</TableLayout>