<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:stretchColumns="1">

    <Button
        android:id="@+id/select_geoloc_btn"
        android:padding="2dip"
        android:text="@string/label_select_geoloc" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="2dip"
        android:text="@string/label_location" />

    <EditText
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:lines="1"
        android:padding="2dip"
        android:text="@string/label_gsh_default_label" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="2dip"
        android:text="@string/label_latitude" />

    <EditText
        android:id="@+id/latitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:lines="1"
        android:maxLength="8"
        android:padding="2dip"
        android:text="@string/label_gsh_default_latitude" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:text="@string/label_longitude" />

    <EditText
        android:id="@+id/longitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:lines="1"
        android:maxLength="8"
        android:padding="2dip"
        android:text="@string/label_gsh_default_longitude" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="2dip"
        android:text="@string/label_accuracy" />

    <EditText
        android:id="@+id/accuracy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:lines="1"
        android:maxLength="8"
        android:padding="2dip"
        android:text="@string/label_gsh_default_accuracy" />

    <Button
        android:id="@+id/validate_btn"
        android:padding="2dip"
        android:text="@string/label_ok" />
</TableLayout>
